--- a/index.html
+++ b/index.html
@@ -3,13 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <title>Sở Thích</title>
+    <link rel="stylesheet" href="sothich.css">
 </head>
 <body>
-<from>
-    <h1>SỞ THÍCH CỦA BẠN</h1>
-    Họ và Tên
-    <input type="text">
+<form>
+        <table>
+            <tr>
+                <th colspan="2" class="c">Sở Thích Của Bạn</th>
+            </tr>
 
-</from>
+            <tr>
+                <td class="a">Họ và Tên</td>
+                <td><input type="text"></td>
+            </tr>
+
+            <tr>
+                <td class="a">Email</td>
+                <td><input type="email"></td>
+            </tr>
+
+            <tr>
+                <td rowspan="2" class="a" >Sở Thích</td>
+                <td>
+                    <table>
+                        <tr>
+                            <td><label class="b"><input type="checkbox" name="hobby" >Thể Thao</label></td>
+                            <td><label class="b"><input type="checkbox" name="hobby" >Âm Nhạc</label></td>
+                            <td><label class="b"><input type="checkbox" name="hobby" >Đọc Sách</label></td>
+                        </tr>
+
+                        <tr>
+                            <td><label class="b"><input type="checkbox" name="hobby" >Lướt Web</label></td>
+                            <td><label class="b"><input type="checkbox" name="hobby" >Chơi Game</label></td>
+                            <td><label class="b"><input type="checkbox" name="hobby" >Điện Ảnh</label></td>
+                        </tr>
+
+                        <tr>
+                            <td><label class="b"><input type="checkbox" name="hobby" >Du Lịch</label></td>
+                        </tr>
+                    </table>
+
+                    <tr>
+                        <td>
+                             <input type="submit" value="Gửi Thông Tin">
+                             <input type="reset" value="Nhập lại">
+                       </td>
+                    </tr>
+                </td>
+            </tr>
+        </table>
+
+</form>
 </body>
 </html>
