--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </tr>
 
             <tr>
-                <td rowspan="2" class="a" >Sở Thích</td>
+                <td class="a" style="float: right">Sở Thích</td>
                 <td>
                     <table>
                         <tr>
@@ -44,7 +44,8 @@
                     </table>
 
                     <tr>
-                        <td>
+                        <td></td>
+                        <td >
                              <input type="submit" value="Gửi Thông Tin">
                              <input type="reset" value="Nhập lại">
                        </td>
